feat: release v0.1.0 setup with updater

--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -99,5 +99,5 @@ jobs:
           files: |
             artifacts/linux/*
           draft: true
-          prerelease: false
+          prerelease: ${{ contains(github.ref, 'beta') || contains(github.ref, 'alpha') || contains(github.ref, 'rc') }}
           generate_release_notes: true
